--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Langebaan Nessie</title>
+<!-- Structured Data for Google -->
+  <script type="application/ld+json" src="structured-data.json"></script>
 <style>
 /* --- BASE --- */
 :root{
